@@ -29,6 +29,7 @@ typedef int (*hashmap_foreach_func)(hashmap_cb *cb, var_p_t k, var_p_t v);
 void hashmap_create(var_p_t map, int size);
 int  hashmap_destroy(var_p_t map);
 var_p_t hashmap_put(var_p_t map, const char *key, int length);
+var_p_t hashmap_putc(var_p_t map, const char *key, int length);
 var_p_t hashmap_putv(var_p_t map, const var_p_t key);
 var_p_t hashmap_get(var_p_t map, const char *key);
 void hashmap_foreach(var_p_t map, hashmap_foreach_func func, hashmap_cb *data);
