@@ -253,6 +253,14 @@ int process_options(int argc, char *argv[]) {
   return 1;
 }
 
+#if defined(__GNUC__)
+// for analysing excessive malloc calls using kdbg
+extern void *__libc_malloc(size_t size);
+void* malloc (size_t size) {
+  return __libc_malloc(size);
+}
+#endif
+
 /*
  * program entry point
  */
