@@ -1,3 +1,6 @@
+2017-11-28 (0.12.10/11)
+	COMMON: owner strings
+
 2017-11-28 (0.12.10)
 	COMMON: Fix some coverty warnings
 
